# perlbook

./: _Deparsed_XSubs.pm  readme.md
matrix/book/: .anjuta_sym_db.db  Makefile.in  configure  configure.ac  ltmain.sh
matrix/book/.anjuta/session/: anjuta.session  dock-layout.xml
matrix/book/Debug/po/: POTFILES
matrix/book/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
matrix/book/src/: Makefile.am  Makefile.in  book.c  book.h  main.c
matrix/cpi/relativistic/: gperl.c  gperl.c~  gperl.h  gperl.h.gch  gperl.h~  gperl_marshel.h  gperlplots.c  gperlplots.c~  gperlplots.lo  gperlstart.c  gperlstart.lo  libperl.la  test
matrix/cpi/relativistic/.libs/: libperl.la
matrix/lib/: GType.pod  Int.pod  Int64.pod  UInt.pod  UInt64.pod  double.pod  enum.pod  flags.pod  perlbook.pod~  privilegies.pod  shadow.pod  unichar.pod
matrix/object/: effect.pl  keep.pl
matrix/test/: drop.t
